active states on links and nav buttons

--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
 
                         <ul class="header__nav-links flex-center-col">
                             <li>
-                                <a href="/" class="header__nav-link btn link-underline-effect">
+                                <a href="/" class="header__nav-link btn hover-underline-animation center">
                                     Home
                                 </a>
                             </li>
 
                             <li>
-                                <a href="/" class="header__nav-link btn link-underline-effect">
+                                <a href="/" class="header__nav-link btn hover-underline-animation center">
                                     Shop
                                 </a>
                             </li>
 
                             <li>
-                                <a href="/" class="header__nav-link btn link-underline-effect">
+                                <a href="/" class="header__nav-link btn hover-underline-animation center">
                                     About
                                 </a>
                             </li>
 
                             <li>
-                                <a href="/" class="header__nav-link btn link-underline-effect">
+                                <a href="/" class="header__nav-link btn hover-underline-animation center">
                                     Contact
                                 </a>
                             </li>
@@ -162,7 +162,7 @@
                         <button type="button" class="homepage__item-btn" title="Shop Now">
                             Shop now
         
-                            <svg class="homepage__item-btn-icon" width="40" height="12" alt="right arrow" xmlns="http://www.w3.org/2000/svg"><path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="var(--color-black)" fill-rule="nonzero"/></svg>
+                            <svg class="homepage__item-btn-icon" width="40" height="12" alt="right arrow" xmlns="http://www.w3.org/2000/svg"><path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="currentColor" fill-rule="nonzero"/></svg>
                         </button>
                     </div>
                 </div>
