--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                     </picture>
 
                     <div class="homepage__item-nav-btn-container">
-                        <button type="button" class="homepage__item-nav-arrow-btn homepage__item-nav-arrow-btn--left" title="Go to previous slide">
+                        <button type="button" class="homepage__item-nav-arrow-btn homepage__item-nav-arrow-btn--left" title="Go to previous slide" aria-label="previous slide">
                             <svg fill="currentColor" class="homepage__item-nav-arrow-btn-icon" width="14" height="24" alt="left navigation arrow button" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="currentColor" fill="currentColor" fill-rule="evenodd"/></svg>
                         </button>
 
-                        <button type="button" class="homepage__item-nav-arrow-btn homepage__item-nav-arrow-btn--right" title="Go to next slide">
+                        <button type="button" class="homepage__item-nav-arrow-btn homepage__item-nav-arrow-btn--right" title="Go to next slide" aria-label="next slide">
                             <svg fill="currentColor" class="homepage__item-nav-arrow-btn-icon" width="14" height="24" alt="right navigation arrow button" xmlns="http://www.w3.org/2000/svg"><path d="M1 0l12 12L1 24" stroke="currentColor" fill="currentColor" fill-rule="evenodd"/></svg>
                         </button>
                     </div>
@@ -159,7 +159,7 @@
                         </div>
 
                         <!-- shop now button -->
-                        <button type="button" class="homepage__item-btn" title="Shop Now">
+                        <button type="button" class="homepage__item-btn" title="Shop Now" aria-label="Shop Now">
                             Shop now
         
                             <svg class="homepage__item-btn-icon" width="40" height="12" alt="right arrow" xmlns="http://www.w3.org/2000/svg"><path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="currentColor" fill-rule="nonzero"/></svg>
