removed comments, add attribution and screenshot, updated readme

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
         <style>
             .attribution {
-                display: none;
-                font-size: 11px;
+                position: absolute;
+                bottom: 5px;
+                left: 5px;
+                font-size: 12px;
                 text-align: center;
             }
             .attribution a {
